@@ -5,15 +5,15 @@
 ;; Login   <ctaf@epita.fr>
 ;;
 ;; Started on  Mon Jan 16 01:12:29 2006 GESTES Cedric
-;; Last update Tue May 30 14:44:37 2006 GESTES Cedric
+;; Last update Tue Feb  6 05:51:53 2007 GESTES Cedric
 ;;
 ;;screensaver
 (message "ctafconf loading: MISC.EMACS")
 
 ;;screensaver
-(when (>= emacs-major-version 21)
-  (require 'zone)
-  (setq zone-idle 300)
-  (zone-when-idle 300))
+;; (when (>= emacs-major-version 21)
+;;   (require 'zone)
+;;   (setq zone-idle 300)
+;;   (zone-when-idle 300))
 
 
