@@ -5,7 +5,7 @@
 ## Login   <ctaf@epita.fr>
 ##
 ## Started on  Fri Sep 30 22:17:52 2005 GESTES Cedric
-## Last update Sun Feb  4 14:29:21 2007 GESTES Cedric
+## Last update Mon Feb  5 19:50:01 2007 GESTES Cedric
 ##
 ##CTAFCONF
 
@@ -85,7 +85,7 @@ alias_set psa 'ps -ax'
 alias_set psu 'ps -aux'
 
 #change the user::group of all the file in the home user directory
-alias_set chownhome '$ctafconf_sudo chown -R $USER:`id -g -n` ~/'
+alias_set chownr 'chown -R $USER:`id -g -n`'
 
 #image en fullscreen
 alias_set full 'xv -maxpect'
