@@ -1,3 +1,11 @@
+2007-02-05 CTAF <>
+	* emacs : removed zone mode (you already miss me)
+	* emacs : improved load time
+
+2007-02-05 CTAF <>
+	* colormake : handle fucking libtool
+	* chownr : chown recursif
+
 2007-02-04 CTAF <>
 	* shell : include colormake, binding for m,ma,etc.. use it :-)
 	* ctafconf : ctafconf-install works !! (no more bug with ask, nor with choice)
